deleteBook file was added it

--- a/views/home.pug
+++ b/views/home.pug
@@ -10,7 +10,7 @@ body
     h2 Books Recommendations
     ul
         each book in bookArray
-            li= book.bookName
+            li= book
 
 
         
