Structure of the project was improved it

--- a/views/bookForm.pug
+++ b/views/bookForm.pug
@@ -7,7 +7,7 @@ html(lang="en")
     body 
         h1 Add new Book 
         
-        form(action="send" method='post')
+        form(action="addBook" method='post')
             label(for="author") Author
             input(type="text" name='author' id='author' placeHolder="Write author name")  
 
