--- a/views/deleteBook.pug
+++ b/views/deleteBook.pug
@@ -5,7 +5,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Document
     body 
-        form(method='delete' action='send')
+        form(method='get' action='/books/:name')
             label(for="deleteBook") Which book would you like to delete?
             input(type="text" name='delete' id='deleteBook' placeHolder='Delete a book')
             button(type="submit") Delete
